[notification-page] ui part done

--- a/frontendmentor/notifications-page-main/index.html
+++ b/frontendmentor/notifications-page-main/index.html
@@ -18,36 +18,118 @@
 </head>
 <body>
 
-  Notifications 3
+  <div class="container">
+    <div class="heading">
+      <div class="heading-title">
+        Notifications
+        <span class="heading-badge">3</span>
+      </div>
+      <button type="button" class="heading-marked">
+        Mark all as read
+      </button>
+    </div>
 
-  Mark all as read
+    <div class="content">
+      <article class="card card-unread">
+        <div class="card-heading">
+          <div class="card-img">
+            <img src="./assets/images/avatar-mark-webber.webp" height="40" alt="">
+          </div>
+          <div class="card-content ">
+            <h5 class="card-name">Mark Webber</h5>
+            <span class="card-description">reacted to your recent post<span class="card-reacted">My first tournament today!</span></span>
+            <p class="card-time">1m ago</p>
+          </div>
+        </div>
+      </article>
+      <article class="card card-unread">
+        <div class="card-heading">
+          <div class="card-img">
+            <img src="./assets/images/avatar-angela-gray.webp" height="40" alt="">
+          </div>
+          <div class="card-content">
+            <h5 class="card-name">Angela Gray</h5>
+            <span class="card-description">followed you</span>
+            <p class="card-time">5m ago</p>
+          </div>
+        </div>
+      </article>
 
-  Mark Webber reacted to your recent post My first tournament today!
-  1m ago
+      <article class="card card-unread">
+        <div class="card-heading">
+          <div class="card-img">
+            <img src="./assets/images/avatar-jacob-thompson.webp" height="40" alt="">
+          </div>
+          <div class="card-content">
+            <h5 class="card-name">Jacob Thompson</h5>
+            <span class="card-description">has joined your group <a href="#" class="card-group">Chess Club</a></span>
+            <p class="card-time">1 day ago</p>
+          </div>
+        </div>
+      </article>
 
-  Angela Gray followed you
-  5m ago
+      <article class="card">
+        <div class="card-heading">
+          <div class="card-img">
+            <img src="./assets/images/avatar-rizky-hasanuddin.webp" height="40" alt="">
+          </div>
+          <div class="card-content">
+            <h5 class="card-name">Rizky Hasanuddin</h5>
+            <span class="card-description">sent you a private message</span>
+            <p class="card-time">5 days ago</p>
+          </div>
+        </div>
+        <div class="card-message">
+          Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
+          I'm already having lots of fun and improving my game.
+        </div>
+      </article>
 
-  Jacob Thompson has joined your group Chess Club
-  1 day ago
+      <article class="card">
+        <div class="card-heading">
+          <div class="card-img">
+            <img src="./assets/images/avatar-kimberly-smith.webp" height="40" alt="">
+          </div>
+          <div class="card-content">
+            <h5 class="card-name">Kimberly Smith </h5>
+            <span class="card-description">commented on your picture</span>
+            <img class="card-picture" src="./assets/images/image-chess.webp" alt="" height="40">
+            <p class="card-time">1 week ago</p>
+          </div>
+        </div>
+      </article>
 
-  Rizky Hasanuddin sent you a private message
-  5 days ago
-  Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
-  I'm already having lots of fun and improving my game.
+      <article class="card">
+        <div class="card-heading">
+          <div class="card-img">
+            <img src="./assets/images/avatar-nathan-peterson.webp" height="40" alt="">
+          </div>
+          <div class="card-content">
+            <h5 class="card-name">Nathan Peterson</h5>
+            <span class="card-description">reacted to your recent post <a href="#" class="card-post">5 end-game strategies to increase your win rate</a></span>
+            <p class="card-time">2 weeks ago</p>
+          </div>
+        </div>
+      </article>
 
-  Kimberly Smith commented on your picture
-  1 week ago
+      <article class="card">
+        <div class="card-heading">
+          <div class="card-img">
+            <img src="./assets/images/avatar-anna-kim.webp" height="40" alt="">
+          </div>
+          <div class="card-content">
+            <h5 class="card-name">Anna Kim</h5>
+            <span>left the group <a href="#" class="card-group">Chess Club</a></span>
+            <p class="card-time">2 weeks ago</p>
+          </div>
+        </div>
+      </article>
+    </div>
+  </div>
 
-  Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
-  2 weeks ago
-
-  Anna Kim left the group Chess Club
-  2 weeks ago
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/yuenu">yuenu</a>.
   </div>
 </body>
 </html>
