--- a/frontendmentor/news-homepage-main/index.html
+++ b/frontendmentor/news-homepage-main/index.html
@@ -43,17 +43,19 @@
         </nav>
         <nav class="mobile-nav">
           <button class="hamburger-menu" type="button">
-            <img src="./assets/images/icon-menu.svg" alt="" data-clicked="0">
+            <img src="./assets/images/icon-menu.svg" alt="" data-clicked="0" />
           </button>
-          
         </nav>
       </header>
 
       <section class="container">
         <div class="container-main">
           <div class="container-main__content">
-            <img src="assets/images/image-web-3-desktop.jpg"
-            srcset="assets/images/image-web-3-mobile.jpg 500w, assets/images/image-web-3-desktop.jpg 1200w" alt="" />
+            <picture>
+              <source srcset="assets/images/image-web-3-desktop.jpg" media="(min-width: 1200px)" />
+              <source srcset="assets/images/image-web-3-mobile.jpg" media="(min-width: 500px)" />
+              <img src="assets/images/image-web-3-mobile.jpg" />
+            </picture>
             <div class="main-content">
               <h2 class="main-title">The Bright Future of Web 3.0?</h2>
               <div class="main-description">
